# mppi_swerve_drive_ros

./: .gitignore  Makefile  README.md  map.pgm
config/: amcl.yaml  base_local_planner.yaml  costmap_common_global.yaml  costmap_common_local.yaml  costmap_global.yaml  costmap_local.yaml  gmapping.yaml  move_base.yaml  teb_local_planner.yaml
data/map/cylinder_garden/: map.pgm
data/map/empty_garden/: map.pgm
data/map/maze/: map.pgm
data/rviz/: dark_mode.rviz  gmapping.rviz  navigation.rviz
docker/: Dockerfile  ros_entrypoint.sh
docs/: setup_env_on_docker.md  setup_env_on_native.md  setup_env_on_native_detail.md
launch/: gazebo_launcher.launch  gazebo_world.launch  gmapping.launch  navigation.launch  rosbag_play.launch
scripts/: generate_scenarios.py
src/control/custom_msgs/mppi_eval_msgs/: package.xml
src/control/mppi_3d/: CMakeLists.txt  README.md  package.xml
src/control/mppi_3d/config/: mppi_3d_a.yaml  mppi_3d_b.yaml
src/control/mppi_3d/include/mppi_3d/: common_type.hpp  mppi_3d.hpp  mppi_3d_core.hpp  mppi_3d_setting.hpp  param.hpp
src/control/mppi_3d/launch/: mppi_3d_a.launch  mppi_3d_b.launch
src/control/mppi_3d/src/: mppi_3d.cpp  mppi_3d_core.cpp  mppi_3d_node.cpp
src/control/mppi_4d/: CMakeLists.txt  README.md  package.xml
src/control/mppi_4d/config/: mppi_4d.yaml
src/control/mppi_4d/include/mppi_4d/: mppi_4d.hpp  mppi_4d_core.hpp  mppi_4d_setting.hpp
src/control/mppi_4d/launch/: mppi_4d.launch
src/control/mppi_4d/src/: mppi_4d.cpp  mppi_4d_core.cpp  mppi_4d_node.cpp
src/control/mppi_h/: CMakeLists.txt  README.md  package.xml
src/control/mppi_h/config/: mppi_h.yaml
src/control/mppi_h/include/: common_param.hpp  common_type.hpp
src/control/mppi_h/include/mode1_mppi_3d/: mppi_3d.hpp  mppi_3d_core.hpp  mppi_3d_setting.hpp  param.hpp
src/control/mppi_h/include/mode2_mppi_4d/: mppi_4d.hpp  mppi_4d_core.hpp  mppi_4d_setting.hpp  param.hpp
src/control/mppi_h/include/mppi_h/: mppi_h.hpp  mppi_h_core.hpp
src/control/mppi_h/launch/: mppi_h.launch
src/control/mppi_h/src/: mppi_h.cpp  mppi_h_core.cpp  mppi_h_node.cpp
src/control/mppi_h/src/mode1_mppi_3d/: mppi_3d_core.cpp
src/control/mppi_h/src/mode2_mppi_4d/: mppi_4d_core.cpp
src/custom_msgs/mppi_eval_msgs/: CMakeLists.txt
src/custom_msgs/mppi_eval_msgs/msg/: MPPIEval.msg
src/operation/joy_controller/: CMakeLists.txt  README.md  package.xml
src/operation/joy_controller/config/: joy.yaml  joy_controller.yaml
src/operation/joy_controller/include/joy_controller/: joy_controller.hpp
src/operation/joy_controller/launch/: joy_controller.launch
src/operation/joy_controller/src/: joy_controller.cpp  joy_controller_node.cpp
src/planning/reference_costmap_generator/: CMakeLists.txt  README.md  package.xml
src/planning/reference_costmap_generator/config/: reference_costmap_generator.yaml
src/planning/reference_costmap_generator/include/reference_costmap_generator/: reference_costmap_generator.hpp
src/planning/reference_costmap_generator/launch/: reference_costmap_generator.launch
src/planning/reference_costmap_generator/src/: reference_costmap_generator.cpp  reference_costmap_generator_node.cpp
src/simulation/gazebo/groundtruth_odom_publisher/: CMakeLists.txt  README.md  package.xml
src/simulation/gazebo/groundtruth_odom_publisher/config/: groundtruth_odom_publisher.yaml
src/simulation/gazebo/groundtruth_odom_publisher/include/groundtruth_odom_publisher/: groundtruth_odom_publisher.hpp
src/simulation/gazebo/groundtruth_odom_publisher/launch/: groundtruth_odom_publisher.launch
src/simulation/gazebo/groundtruth_odom_publisher/src/: groundtruth_odom_publisher.cpp  groundtruth_odom_publisher_node.cpp
src/simulation/gazebo/vel_driver/: CMakeLists.txt  README.md  package.xml
src/simulation/gazebo/vel_driver/config/: vel_driver.yaml
src/simulation/gazebo/vel_driver/include/vel_driver/: vel_driver.hpp
src/simulation/gazebo/vel_driver/launch/: vel_driver.launch
src/simulation/gazebo/vel_driver/src/: vel_driver.cpp  vel_driver_node.cpp
src/simulation/gazebo/world_handler/: CMakeLists.txt  README.md  package.xml
src/simulation/gazebo/world_handler/include/world_handler/: world_handler.hpp
src/simulation/gazebo/world_handler/launch/: launch_gazebo_world_with_fwids.launch
src/simulation/gazebo/world_handler/rviz/: fwids_vehicle.rviz
src/simulation/gazebo/world_handler/src/: world_handler.cpp  world_handler_node.cpp
src/simulation/gazebo/world_handler/world/: cylinder_garden.world  empty_garden.world  maze.world
src/simulation/gazebo/world_handler/xacro/: fwids_vehicle.urdf
src/simulation/gazebo/world_make/: CMakeLists.txt  README.md  package.xml
src/simulation/gazebo/world_make/config/: fwids_controller.yaml
src/simulation/gazebo/world_make/include/world_make/: world_make.hpp
src/simulation/gazebo/world_make/launch/: launch_gazebo_world_with_fwids.launch
src/simulation/gazebo/world_make/src/: world_make.cpp  world_make_node.cpp
src/simulation/gazebo/world_make/xacro/: fwids_vehicle.xacro
src/visualization/map_visualizer/: CMakeLists.txt  README.md  package.xml
src/visualization/map_visualizer/config/: map_visualizer.yaml
src/visualization/map_visualizer/include/map_visualizer/: map_visualizer.hpp
src/visualization/map_visualizer/launch/: map_visualizer.launch
src/visualization/map_visualizer/src/: map_visualizer.cpp  map_visualizer_node.cpp
